5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1575_1334.log
== TEST (2019-03-12 23:16:22) 
-- CODE:
print( 5 + 3)

print(10 - 2)

print(4 * 2)

print(16 / 2)

print()

print(2**3)
-- OUTPUT:
8
8
8
8.0

8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:25:08) 
-- CODE:
print( 5 + 3)

print(10 - 2)

print(4 * 2)

print(16 / 2)

print()

print(2**3)
-- OUTPUT:
8
8
8
8.0

8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:25:14) 
-- CODE:
print( 5 + 3)

print(10 - 2)

print(4 * 2)

print(16 / 2)

print()

print(2**3)
-- EXECUTION TIME:
0.126214
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
8
8
8
8.0

8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:35:02) 
-- CODE:
print("adiçao" 5 + 3)

print("subtraçao" 10 - 2)

print("multiplicaçao" 4 * 2)

print("divisao" 16 / 2)

print("resto" )

print("potenciaçao" 2**3)
-- ERROR:
File "XXXX", line 1
    print("adiçao" 5 + 3)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:41:55) 
-- CODE:
print("adiçao" 5 + 3)

print("subtraçao" 10 - 2)

print("multiplicaçao" 4 * 2)

print("divisao" 16 / 2)

print("resto" 3 % 20 )

print("potenciaçao" 2**3)
-- ERROR:
File "XXXX", line 1
    print("adiçao" 5 + 3)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:42:47) 
-- CODE:
print("Adiçao" 5 + 3)

print("Subtraçao" 10 - 2)

print("Multiplicaçao" 4 * 2)

print("Divisao" 16 / 2)

print("Resto" 3 % 20 )

print("Potenciaçao" 2**3)
-- ERROR:
File "XXXX", line 1
    print("Adiçao" 5 + 3)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:43:21) 
-- CODE:
print("Adição" 5 + 3)

print("Subtraçao" 10 - 2)

print("Multiplicaçao" 4 * 2)

print("Divisao" 16 / 2)

print("Resto" 3 % 20 )

print("Potenciaçao" 2**3)
-- ERROR:
File "XXXX", line 1
    print("Adição" 5 + 3)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:43:36) 
-- CODE:
print("Adicao" 5 + 3)

print("Subtraçao" 10 - 2)

print("Multiplicaçao" 4 * 2)

print("Divisao" 16 / 2)

print("Resto" 3 % 20 )

print("Potenciaçao" 2**3)
-- ERROR:
File "XXXX", line 1
    print("Adicao" 5 + 3)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:44:50) 
-- CODE:
print("Adiçao" 5 + 3)

print("Subtraçao" 10 - 2)

print("Multiplicaçao" 4 * 2)

print("Divisao" 16 / 2)

print("Resto" 3 % 20 )

print("Potenciaçao" 2**3)
-- ERROR:
File "XXXX", line 1
    print("Adiçao" 5 + 3)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:45:36) 
-- CODE:
print("Adicao" 5 + 3)

print("Subtracao" 10 - 2)

print("Multiplicacao" 4 * 2)

print("Divisao" 16 / 2)

print("Resto" 3 % 20 )

print("Potenciacao" 2**3)
-- ERROR:
File "XXXX", line 1
    print("Adicao" 5 + 3)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:45:44) 
-- CODE:
print("Adicao" 5 + 3)

print("Subtracao" 10 - 2)

print("Multiplicacao" 4 * 2)

print("Divisao" 16 / 2)

print("Resto" 3 % 20 )

print("Potenciacao" 2**3)
-- EXECUTION TIME:
0.224341
-- ERROR:
  File "/home/codebench/codes/1575/1334/main.py", line 1
    print("Adicao" 5 + 3)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:24:20) 
-- CODE:
print("Adicao", 5 + 3)

print("Subtracao", 10 - 2)

print("Multiplicacao", 4 * 2)

print("Divisao", 16 / 2)

print("Resto" 20 % 12)

print("Potenciacao" 2**3)
-- EXECUTION TIME:
0.148986
-- ERROR:
  File "/home/codebench/codes/1575/1334/main.py", line 9
    print("Resto" 20 % 12)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:25:01) 
-- CODE:
print("Adicao:", 5 + 3)

print("Subtracao:", 10 - 2)

print("Multiplicacao:", 4 * 2)

print("Divisao:", 16 / 2)

print("Resto:" 20 % 12)

print("Potenciacao:" 2**3)
-- EXECUTION TIME:
0.261937
-- ERROR:
  File "/home/codebench/codes/1575/1334/main.py", line 9
    print("Resto:" 20 % 12)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:25:13) 
-- CODE:
print("Adicao:", 5 + 3)

print("Subtracao:", 10 - 2)

print("Multiplicacao:", 4 * 2)

print("Divisao:", 16 / 2)

print("Resto:", 20 % 12)

print("Potenciacao:", 2**3)
-- EXECUTION TIME:
0.191532
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao: 8
Subtracao: 8
Multiplicacao: 8
Divisao: 8.0
Resto: 8
Potenciacao: 8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
